# ultraskate_dashboard

./: CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  run_api.py
api/: app.py  loader.py
backend/: API_README.md  event_comparer.py  event_params_data.py  event_stats.py  file_manager.py  main.py  pyproject.toml  scraper.py  utils.py
backend/api/: app.py  loader.py  main.py
backend/api/routes/: athletes.py  base.py  events.py  performances.py
backend/models/: athlete.py  athlete_aliases.py  athlete_registry.py  event.py  event_params.py  event_registry.py  lap_stats.py  performance.py  scraped_site_params.py  track.py  ultraskate.py
backend/scraped_events_save/: ultraskate_miami_2013.json  ultraskate_miami_2014.json  ultraskate_miami_2015.json  ultraskate_miami_2016.json  ultraskate_miami_2017.json  ultraskate_miami_2018.json  ultraskate_miami_2019.json  ultraskate_miami_2020.json  ultraskate_miami_2021.json  ultraskate_miami_2022.json  ultraskate_miami_2023.json  ultraskate_miami_2024.json  ultraskate_miami_2025.json
backend/scraped_events_save/old/: ultraskate_miami_2013.json  ultraskate_miami_2014.json  ultraskate_miami_2015.json  ultraskate_miami_2016.json  ultraskate_miami_2017.json  ultraskate_miami_2018.json  ultraskate_miami_2019.json  ultraskate_miami_2020.json  ultraskate_miami_2021.json  ultraskate_miami_2022.json  ultraskate_miami_2023.json  ultraskate_miami_2024.json  ultraskate_miami_2025.json
backend/webscraper/: browser_manager.py  event_scraper.py  jms_site_params.py  myraceresult_params.py  webscraper.py
(+23 files in other folders)
