[project]
name = "ultraskatedashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "fastapi>=0.128.0",
    "playwright>=1.57.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
